tests/build/cases/ui_node/invalid_delegate_pair_name.stderr
error: expected `child`, `children`, `delegate`, or, `delegate_list`
 --> cases/ui_node/invalid_delegate_pair_name.rs:9:11
  |
9 | #[ui_node(delegate2 = &mut self.inner)]
  |           ^^^^^^^^^

warning: unused import: `UiNode`
 --> cases/ui_node/invalid_delegate_pair_name.rs:3:34
  |
3 |     widget_instance::{NilUiNode, UiNode},
  |                                  ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
